kubernetes/demo-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test
  namespace: default
spec:
  tolerations:
    - effect: NoSchedule
      key: node-role.kubernetes.io/control-plane
  containers:
    - name: fio
      image: mayadata/fio
      args:
        - sleep
        - "1000000"
      volumeMounts:
        - mountPath: "/volume"
          name: pvc
      securityContext:
        allowPrivilegeEscalation: false
        capabilities:
          drop:
            - ALL
        seccompProfile:
          type: RuntimeDefault
        runAsNonRoot: true
  terminationGracePeriodSeconds: 1
  securityContext:
    fsGroup: 65534
    runAsGroup: 65534
    runAsUser: 65534
  volumes:
    - name: pvc
      ephemeral:
        volumeClaimTemplate:
          metadata:
            labels:
              type: pvc-volume
          spec:
            accessModes: ["ReadWriteOnce"]
            storageClassName: proxmox-data-xfs
            resources:
              requests:
                storage: 10Gi
